@@ -2,6 +2,7 @@
 v4.2.0-git
 ----------
 
+[jan] Fix importing vCard fields with lowercase TYPE attributes (Bug #13006).
 [jan] Don't remove missing contacts from distributions lists in Kolab backends
       (Bug #12861).
 [jan] Support binary fields (photos) in Kolab backends.
